--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtdeclarative-opensource-src (5.9.5-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Dmitry Shachnev <mitya57@ubuntu.com>  Sat, 14 Apr 2018 10:18:38 +0300
+
 qtdeclarative-opensource-src (5.9.4-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
