--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtdeclarative-opensource-src (5.9.5-0ubuntu2) UNRELEASED; urgency=medium
+
+
+ -- Dmitry Shachnev <mitya57@ubuntu.com>  Sun, 26 Aug 2018 14:32:09 +0300
+
 qtdeclarative-opensource-src (5.9.5-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
