--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtdeclarative-opensource-src (5.12.8-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream bugfix release.
+
+ -- Dmitry Shachnev <mitya57@ubuntu.com>  Wed, 08 Apr 2020 15:32:29 +0300
+
 qtdeclarative-opensource-src (5.12.5-5build1) focal; urgency=medium
 
   * No-change rebuild for libgcc-s1 package name change.
