--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtdeclarative-opensource-src (5.12.8-0ubuntu1) UNRELEASED; urgency=medium
+qtdeclarative-opensource-src (5.12.8-0ubuntu1) focal; urgency=medium
 
   * New upstream bugfix release.
   * Update debian/patches/fix_test_remove_qlibraryinfo.patch.
@@ -6,7 +6,7 @@ qtdeclarative-opensource-src (5.12.8-0ubuntu1) UNRELEASED; urgency=medium
   * Bump ABI version to qtdeclarative-abi-5-12-8.
   * Update symbols files from the current build log.
 
- -- Dmitry Shachnev <mitya57@ubuntu.com>  Wed, 08 Apr 2020 15:32:29 +0300
+ -- Dmitry Shachnev <mitya57@ubuntu.com>  Thu, 09 Apr 2020 13:18:23 +0300
 
 qtdeclarative-opensource-src (5.12.5-5build1) focal; urgency=medium
 
