--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtdeclarative-opensource-src (5.14.2+dfsg-3-c1) unstable; urgency=medium
+
+  * Removed symbols files
+
+ -- ciwei100000 <ciwei100000@gmail.com>  Mon, 17 Aug 2020 04:48:22 -0700
+
 qtdeclarative-opensource-src (5.14.2+dfsg-3) unstable; urgency=medium
 
   * Update symbols files for GCC 10 (closes: #957729).
