--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtdeclarative-opensource-src (5.15.2+dfsg-9c1) unstable; urgency=medium
+
+  * Merge tag 'debian/5.15.2+dfsg-9' into ciwei100000
+
+ -- Xuqing Liu <ciwei100000@gmail.com>  Tue, 28 Dec 2021 11:59:56 -0800
+
 qtdeclarative-opensource-src (5.15.2+dfsg-9) unstable; urgency=medium
 
   * Remove unneeded libgl1-mesa-dri Build-Depends and Depends.
